# idle_notifier

./: .gitignore  MANIFEST.in  README.md  config.json  main.py  pyproject.toml  setup.py
src/idle_notifier/: __init__.py  _config.json  _idle_notifier.service  common.py  main.py
