[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "idle_notifier"
version = "0.1"
dependencies = [
  'coloredlogs',
  'psutil',
  'urllib3',
]

[project.optional-dependencies]
tests = [
  'torch',
]

[project.scripts]
idle_notifier_setup = "idle_notifier:idle_notifier_setup"
idle_notifier_remove = "idle_notifier:idle_notifier_remove"